--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "serve:storybook": "vue-cli-service serve:storybook -p 6006 -c config/storybook"
   },
   "dependencies": {
+    "canvasjs": "^1.8.1",
+    "chart.js": "^2.7.3",
     "vue": "^2.5.17",
     "vuetify": "^1.3.0"
   },
