--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "canvasjs": "^1.8.1",
     "chart.js": "^2.7.3",
+    "lodash": "^4.17.11",
     "vue": "^2.5.17",
     "vuetify": "^1.3.0"
   },
