--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "canvasjs": "^1.8.1",
     "chart.js": "^2.7.3",
+    "cross-env": "^5.2.0",
+    "crossenv": "0.0.2-security",
     "lodash": "^4.17.11",
     "vue": "^2.5.17",
     "vuetify": "^1.3.0"
